# EUCLID

./: .gitignore  LICENSE  README.md  clustering-fix.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: LICENSE-checkpoint  README-checkpoint.md  clustering-fix-checkpoint.ipynb  clustering_old-checkpoint.py  pyproject-checkpoint.toml
src/euclid_msi/: __init__.py  case_control.py  clustering.py  data_loading.py  embedding.py  euclid_casecontrol.py  plotting.py  plottingtmp.py  postprocessing.py  preprocessing.py
src/euclid_msi.egg-info/: PKG-INFO  SOURCES.txt
src/euclid_msi/.ipynb_checkpoints/: case_control-checkpoint.py  clustering-WORKS-checkpoint.py  clustering-checkpoint.py  embedding-checkpoint.py  plotting-checkpoint.py  postprocessing-checkpoint.py  preprocessing-checkpoint.py
tests/: tests.ipynb
tests/.ipynb_checkpoints/: tests-checkpoint.ipynb
