[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euclid_msi"
version = "0.0.1b"
description = "A package for spatial lipidomics data analysis including preprocessing, embedding, clustering, postprocessing, case-control analysis, and plotting."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Luca Fusar Bassini", email = "luca.fusarbassini@epfl.ch"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/yourusername/euclid-msi"
Documentation = "https://github.com/yourusername/euclid-msi#readme"
Repository = "https://github.com/yourusername/euclid-msi.git"
Issues = "https://github.com/yourusername/euclid-msi/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["euclid_msi"] 